--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "node": "^19.8.1"
+    "axios": "^1.3.6",
+    "body": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.5",
+    "node": "^19.8.1",
+    "nodemon": "^2.0.22",
+    "parser": "^0.1.4"
   }
 }
