--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.5",
     "node": "^19.8.1",
-    "nodemon": "^3.0.3",
-    "parser": "^0.1.4"
+    "nodemon": "^3.0.3"
   }
 }
